# Computer-Architecture

./: README.md
Branch Predictor/: .gitignore  CMakeLists.txt  README  bp.cpp  run_all_tests.sh
Branch Predictor/tests/: run_all_tests.sh
Branch Predictor/tests/tests_itai_idan_CA/: example44.out
Branch Predictor/tests_itai_idan_CA/: example10.out  example10.trc  example11.out  example11.trc  example12.out  example12.trc  example13.out  example13.trc  example14.out  example14.trc  example15.out  example15.trc  example16.out  example16.trc  example17.out  example17.trc  example18.out  example18.trc  example19.out  example19.trc  example20.out  example20.trc  example21.out  example21.trc  example22.out  example22.trc  example23.out  example23.trc  example24.out  example24.trc  example25.out  example25.trc  example26.out  example26.trc  example27.out  example27.trc  example28.out  example28.trc  example29.out  example29.trc  (+152 more)
Cache Simulator/: CMakeLists.txt  cacheSim  cacheSim.cpp  cacheSim_withPrint  cacheSimulator.cpp  cacheSimulator.h  makefile
Cache Simulator/tests/: run.sh
Cache Simulator/tests/nimrod_tests/: example0_command  example0_trace  example10_command  example10_trace  example11_command  example11_trace  example12_command  example12_trace  example13_command  example13_trace  example14_command  example14_trace  example15_command  example15_trace  (+106 more)
Multithreading Simulator/: CMakeLists.txt  README.md  core_api.cpp  sim_api.c
Multithreading Simulator/tests/: README.txt
Out of Order Execution/: CMakeLists.txt  README.md  dflow_calc.cpp
hw1/: bp.cpp
